# integration-python-library

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build.yml  python-code-format.yml  python-publish-pypi.yml
docs/: code_guidelines.md  setup.md
examples/: README.md  hello_integration.json  hello_integration.py  remote.json  remote.py  remote_ui_page.json  setup_flow.json  setup_flow.py  voice.json  voice.py
scripts/: compile_protos.py
tests/: test_api.py  test_media_player.py  test_paging.py  test_voice_assistant.py
uc_integration_api/: __init__.py  api.py  api_definitions.py
ucapi/: __init__.py  api.py  api_definitions.py  button.py  climate.py  cover.py  entities.py  entity.py  ir_emitter.py  light.py  media_player.py  msg_definitions.py  remote.py  select.py  sensor.py  switch.py  ui.py  voice_assistant.py  voice_stream.py
ucapi/proto/: __init__.py  ucr_integration_voice_pb2.py  ucr_integration_voice_pb2.pyi
