[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ucapi"
authors = [
    {name = "Unfolded Circle ApS", email = "hello@unfoldedcircle.com"}
]
license = {text = "MPL-2.0"}
description = "Python wrapper for the Unfolded Circle Integration API"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "pyee>=9.0",
    "websockets>=11.0",
    "zeroconf>=0.120.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
"Homepage"    = "https://www.unfoldedcircle.com/"
"Source Code" = "https://github.com/unfoldedcircle/integration-python-library"
"Bug Reports" = "https://github.com/unfoldedcircle/integration-python-library/issues"
"Discord"     = "http://unfolded.chat/"
"Forum"       = "http://unfolded.community/"

[project.optional-dependencies]
testing = [
    "pylint",
    "flake8-docstrings",
    "flake8",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["ucapi"]
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "ucapi/_version.py"

[tool.isort]
profile = "black"

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.MASTER]
ignore-paths = [
    # ignore generated file
    "ucapi/_version.py"
]

[tool.pylint."messages control"]
# Reasons disabled:
# duplicate-code - unavoidable
# global-statement - not yet considered
# too-many-* - are not enforced for the sake of readability
# too-few-* - same as too-many-*
# line-too-long - handled with black & flake8
# fixme - refactoring in progress

disable = [
    "duplicate-code",
    "global-statement",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "line-too-long",
    "fixme"
]

[tool.pylint.STRING]
# This flag controls whether inconsistent-quotes generates a warning when the
# character used as a quote delimiter is used inconsistently within a module.
check-quote-consistency = true
