[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ucapi"
authors = [
    {name = "Unfolded Circle ApS", email = "hello@unfoldedcircle.com"}
]
license = {text = "MPL-2.0"}
description = "Python wrapper for the Unfolded Circle Integration API"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Home Automation",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "protobuf~=6.33.2",
    "pyee>=9.0",
    "websockets>=14.0",
    "zeroconf>=0.120.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown; charset=UTF-8"

[project.urls]
"Homepage"    = "https://www.unfoldedcircle.com/"
"Source Code" = "https://github.com/unfoldedcircle/integration-python-library"
"Bug Reports" = "https://github.com/unfoldedcircle/integration-python-library/issues"
"Discord"     = "http://unfolded.chat/"
"Forum"       = "https://unfolded.community/"

[project.optional-dependencies]
testing = [
    "pylint==4.0.4",
    "flake8-docstrings",
    "flake8",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["ucapi", "ucapi.proto"]
platforms = ["any"]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "ucapi/_version.py"

[tool.isort]
profile = "black"
skip_glob = ["ucapi/proto/*_pb2.py", "ucapi/proto/*_pb2.pyi"]

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.main]
ignore-paths = [
    # ignore generated file
    "ucapi/_version.py",
    # ignore generated protobuf modules (Python + type stubs and optional gRPC stubs)
    "ucapi/proto/.*_pb2.py",
    "ucapi/proto/.*_pb2.pyi",
]

[tool.pylint."messages control"]
# Reasons disabled:
# duplicate-code - unavoidable
# global-statement - not yet considered
# too-many-* - are not enforced for the sake of readability
# too-few-* - same as too-many-*
# line-too-long - handled with black & flake8
# fixme - refactoring in progress

disable = [
    "duplicate-code",
    "global-statement",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-few-public-methods",
    "line-too-long",
    "fixme"
]

[tool.pylint.STRING]
# This flag controls whether inconsistent-quotes generates a warning when the
# character used as a quote delimiter is used inconsistently within a module.
check-quote-consistency = true


[tool.black]
line-length = 88
# Exclude generated protobuf modules, even if passed explicitly to Black
force-exclude = """
(
  proto/.+_pb2(?:_grpc)?\\.pyi?$  # *_pb2.py, *_pb2.pyi, *_pb2_grpc.py
)
"""
